# cmake_project

./: .gitignore
printing_hello_world/: CMakeLists.txt  main.cpp
